0.0.2
-----
1. Wait for 5 seconds for URL to load. If an invalid server address is entered
   then this will timeout.
2. If no server configured, attempt to auto-discover and use first server found.
3. Add button in settings dialog to discover server.

0.0.1
-----

1. Initial release.