@@ -18,6 +18,8 @@ import androidx.preference.PreferenceManager;
 import java.util.List;
 
 public class SettingsActivity extends AppCompatActivity {
+    public static final String SERVER_PREF_KEY = "server_address";
+    public static final String CLEAR_CACHE_PREF_KEY = "clear_cache";
     private static final String TAG = "LMS";
     private static boolean visible = false;
     public static boolean isVisible() {
@@ -59,7 +61,7 @@ public class SettingsActivity extends AppCompatActivity {
     public static class SettingsFragment extends PreferenceFragmentCompat {
         private class Discovery extends ServerDiscovery {
             public Discovery(Context context) {
-                super(context);
+                super(context, true);
             }
 
             public void discoveryFinished(List<String> servers) {
@@ -67,15 +69,42 @@ public class SettingsActivity extends AppCompatActivity {
                 if (servers.size()<1) {
                     Toast.makeText(getContext(),getResources().getString(R.string.no_servers), Toast.LENGTH_SHORT).show();
                 } else {
-                    EditTextPreference serverAddress = (EditTextPreference)getPreferenceManager().findPreference("server_address");
-                    if (null != serverAddress) {
-                        serverAddress.setText(servers.get(0));
+                    EditTextPreference serverAddress = (EditTextPreference)getPreferenceManager().findPreference(SERVER_PREF_KEY);
+                    SharedPreferences sharedPreferences = getPreferenceManager().getDefaultSharedPreferences(getContext());
+                    String serverToUse = servers.get(0);
+                    String current = null != serverAddress ? serverAddress.getText() : null;
+                    if (null == current || current.isEmpty()) {
+                        current = sharedPreferences.getString(SERVER_PREF_KEY, null);
                     }
 
-                    SharedPreferences sharedPreferences = getPreferenceManager().getDefaultSharedPreferences(getContext());
-                    SharedPreferences.Editor editor = sharedPreferences.edit();
-                    editor.putString("server_address", servers.get(0));
-                    editor.commit();
+                    if (servers.size()>1) {
+                        // If more than 1 server found, then select one that is different to the currently selected one.
+
+                        if (current!=null && !current.isEmpty()) {
+                            for (String server: servers) {
+                                if (!server.equals(current)) {
+                                    serverToUse = server;
+                                    break;
+                                }
+                            }
+                        }
+                    }
+
+                    if (null==current || current.isEmpty() || !current.equals(serverToUse)) {
+                        if (null==current || current.isEmpty()) {
+                            Toast.makeText(getContext(), getResources().getString(R.string.server_discovered), Toast.LENGTH_SHORT).show();
+                        } else {
+                            Toast.makeText(getContext(), getResources().getString(R.string.server_changed), Toast.LENGTH_SHORT).show();
+                        }
+
+                        if (null != serverAddress) {
+                            serverAddress.setText(serverToUse);
+                        }
+
+                        SharedPreferences.Editor editor = sharedPreferences.edit();
+                        editor.putString(SERVER_PREF_KEY, serverToUse);
+                        editor.commit();
+                    }
                 }
             }
         }
@@ -106,10 +135,10 @@ public class SettingsActivity extends AppCompatActivity {
                     @Override
                     public boolean onPreferenceClick(Preference arg0) {
                         SharedPreferences sharedPreferences = PreferenceManager.getDefaultSharedPreferences(getContext());
-                        Boolean clear = sharedPreferences.getBoolean("clear_cache",false);
+                        Boolean clear = sharedPreferences.getBoolean(CLEAR_CACHE_PREF_KEY,false);
                         if (!clear) {
                             SharedPreferences.Editor editor = sharedPreferences.edit();
-                            editor.putBoolean("clear_cache", true);
+                            editor.putBoolean(CLEAR_CACHE_PREF_KEY, true);
                             editor.commit();
                         }
                         return true;
